# GenomeLens

./: .gitignore  Cargo.toml  README.md
crates/genomelens-cli/: Cargo.toml
crates/genomelens-cli/src/: main.rs
crates/genomelens-core/: Cargo.toml
crates/genomelens-core/src/: chromosome.rs  error.rs  lib.rs  sequence.rs  stats.rs  variant.rs  vcf_dashboard.rs  vcf_stats.rs
crates/genomelens-parse/: Cargo.toml
crates/genomelens-parse/src/: ascii.rs  lib.rs  reader.rs
crates/genomelens-parse/src/fasta/: mod.rs  streaming.rs
crates/genomelens-parse/src/vcf/: header.rs  mod.rs  record.rs  streaming.rs
crates/genomelens-query/: Cargo.toml
crates/genomelens-query/src/: ast.rs  lib.rs  parser.rs  plan.rs  project.rs  token.rs  vm.rs
testdata/: ALL.chr22.phase3_shapeit2_mvncall_integrated_v5b.20130502.genotypes.vcf.gz.tbi  multiline.fasta  small.fasta  small.vcf
